--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "resend": "^6.0.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
