--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "jsx": "preserve",
+    "module": "esnext",
+    "target": "es2020",
     "lib": [
       "dom",
       "dom.iterable",
@@ -15,6 +17,7 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "paths": { "@/*": ["./*"] },
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
