--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 POSTGRES_URL="postgres://user:password@host:5432/db?sslmode=require"
 
 # Copy values below to your Vercel project env vars
-RESEND_API_KEY=re_9EvApNAK_31x4Jmg184FRqY7vYN6i7Pyv
+RESEND_API_KEY=
 LEAD_FROM_EMAIL=\"NRG Windows <leads@noreply.nrgwindowsllc.com>\"
 // Optional: Only used if you decide to enable self-booking again
 NEXT_PUBLIC_SCHEDULER_RETAIL_URL=
